// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SectionBackground /> should render with background dark 1`] = `
<div>
  <div
    class="sc-gsnTZi kWuscG"
    id=""
  >
    <div
      class="sc-bczRLJ kHytwx"
    >
      <h1>
        Children
      </h1>
    </div>
  </div>
   
</div>
`;

exports[`<SectionBackground /> should render with background light 1`] = `
<div>
  <div
    class="sc-gsnTZi fgWWhE"
    id=""
  >
    <div
      class="sc-bczRLJ kHytwx"
    >
      <h1>
        Children
      </h1>
    </div>
  </div>
   
</div>
`;
